added load more button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             placeholder="Search..."
             class="input input-bordered w-full max-w-xs bg-[#100F0F0D] border-none"
           />
-          <button ondblclick="handleSearch()" class="btn bg-[#0D6EFD] w-40">
+          <button onclick="handleSearch()" class="btn bg-[#0D6EFD] w-40">
             Search
           </button>
         </section>
@@ -55,7 +55,7 @@
             class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3"
           ></div>
           <div id="load-more" class="hidden m-10 text-center">
-            <button ondblclick="" class="btn bg-[#0D6EFD] w-40">
+            <button onclick="handleLoadMore()" class="btn bg-[#0D6EFD] w-40">
               Load More
             </button>
           </div>
@@ -63,6 +63,7 @@
       </section>
     </main>
     <footer></footer>
-    <script src="JS/phone-hunting.js"></script>
+    <!-- <script src="JS/phone-hunting.js"></script> -->
+    <script src="JS/otherjs.js"></script>
   </body>
 </html>
